add html pages for girls and boys

--- a/index.html
+++ b/index.html
@@ -4,4 +4,8 @@
         <h1> NYC Open Data Project </h1>
     </body>
 </html>
-
+ <select id="chartType" style="width:200px;">
+            <option value="bar">Select Chart Type</option>
+            <option value="bar">Bar</option>
+            <option value="pie">Pie</option>
+          </select>
