adding js pages for girls and boys

--- a/index.html
+++ b/index.html
@@ -1,11 +1,39 @@
+<!DOCTYPE html>
 <html>
-    <tittle> NYC Open Data Project </tittle>
-    <body>
-        <h1> NYC Open Data Project </h1>
-    </body>
-</html>
- <select id="chartType" style="width:200px;">
-            <option value="bar">Select Chart Type</option>
-            <option value="bar">Bar</option>
-            <option value="pie">Pie</option>
-          </select>
+  <head>
+    <meta charset="utf-8">
+    <meta name="viewport" content="width=device-width">
+    <title>repl.it</title>
+    <link href="style.css" rel="stylesheet" type="text/css" />
+<!--    <link href="girlnames.css" rel="stylesheet" type="text/css" />
+    <link href="boynames.css" rel="stylesheet" type="text/css" />-->
+  </head>
+  <body>
+    <script src="script.js"></script>
+
+    <div id="banner">
+      <h1><b>Popular Baby Names<b/></h1>
+      <p>Daycare<p>
+    </div>
+    <nav class="container">
+      <a href="index.html">Home</a>
+      <a href="boynames.html">Boys Names </a>
+      <a href="girlnames.html">Girls Names</a>
+    </nav>
+
+    <div class="container">
+	  <div style="flex:1">
+
+      <div class="container" style="background-color:rgba(0,0,0,0.5);">
+	  <div style="flex:1">
+		<p style="color:white; font-size:21px; font-style:italic; text-shadow: 2px 2px 4px #000, -2px -2px 4px #000, 2px -2px 4px #000, -2px 2px 4px #000;">
+		  Around 140 million babies are born every year in the world. That's more than four births every second of every day. More than half of all births take place in Asia with 25 million births in India and 16 million births in China alone every year.In 2023, there were approximately 3.6 million babies born in the United States. 
+		</p>
+	  </div>
+    <div style="flex:1">
+	  <p style="color:white; font-style:italic; text-shadow: 2px 2px 4px #000, -2px -2px 4px #000, 2px -2px 4px #000, -2px 2px 4px #000;">
+	  <img src="homepagepicture.png" style="width:30%">
+       </p>
+	  </div>
+	</div>
+    
