--- a/index.html
+++ b/index.html
@@ -26,14 +26,42 @@
 
       <div class="container" style="background-color:rgba(0,0,0,0.5);">
 	  <div style="flex:1">
-		<p style="color:white; font-size:21px; font-style:italic; text-shadow: 2px 2px 4px #000, -2px -2px 4px #000, 2px -2px 4px #000, -2px 2px 4px #000;">
+		<p style="color:white; font-size:24px; font-style:italic; text-shadow: 2px 2px 4px #000, -2px -2px 4px #000, 2px -2px 4px #000, -2px 2px 4px #000;">
 		  Around 140 million babies are born every year in the world. That's more than four births every second of every day. More than half of all births take place in Asia with 25 million births in India and 16 million births in China alone every year.In 2023, there were approximately 3.6 million babies born in the United States. 
 		</p>
 	  </div>
     <div style="flex:1">
 	  <p style="color:white; font-style:italic; text-shadow: 2px 2px 4px #000, -2px -2px 4px #000, 2px -2px 4px #000, -2px 2px 4px #000;">
-	  <img src="homepagepicture.png" style="width:30%">
+	  <img src="homepagepicture.png" style="width:40%">
        </p>
 	  </div>
 	</div>
-    
+
+  <div class="container" style="background-color:rgba(0,0,0,0.5);">
+	  <div style="flex:1">
+		<p style="color:white; font-size:24px; font-style:italic; text-shadow: 2px 2px 4px #000, -2px -2px 4px #000, 2px -2px 4px #000, -2px 2px 4px #000;">
+		 <img src="homepagechart.webp" style="width:40%">
+		</p>
+	  </div>
+    <div style="flex:1">
+	  <p style="color:white; font-size:24px; font-style:italic; text-shadow: 2px 2px 4px #000, -2px -2px 4px #000, 2px -2px 4px #000, -2px 2px 4px #000;">
+	  In 2023, an estimated 3,667,758 babies were born in the United States, which translates to approximately 9,852 births per day. The total number of births has declined since the most recent high in 2007, with the general fertility rate also showing a decrease. In 2023, India had the most births per day, accounting for 63,600 births. This is more than twice the number of births per day in China, which was in second place. A Visual Capitalist report estimated that India saw over 2,600 births every hour in 2023. India, China, and Nigeria accounted for nearly 30% of global daily births in 2023. 
+       </p>
+	  </div>
+	</div>
+
+  <div class="container">
+	  <div style="flex:1">
+
+      <div class="container" style="background-color:rgba(0,0,0,0.5);">
+	  <div style="flex:1">
+		<p style="color:white; font-size:24px; font-style:italic; text-shadow: 2px 2px 4px #000, -2px -2px 4px #000, 2px -2px 4px #000, -2px 2px 4px #000;">
+A name is one of the first gifts a parent gives to their child. Names are important because they're one of the ways that we mark our place in the world. They're the first symbols of our identity and one of the first things we lead with when we meet someone new, like now.The reason choosing your child's name is so important is that it's a key step in defining your new family. Your child's name symbolizes the values and priorities most important in the world you create for your child. It sets the identity you present to the world and to yourself. If you cant seem to decide or feel like its difficult to choose a name, here are some popular baby names for boys and girls.		</p>
+	  </div>
+    <div style="flex:1">
+	  <p style="color:white; font-style:italic; text-shadow: 2px 2px 4px #000, -2px -2px 4px #000, 2px -2px 4px #000, -2px 2px 4px #000;">
+	  <img src="secondbabypicture.jpg" style="width:40%">
+       </p>
+	  </div>
+	</div>
+  
