--- a/girlnames.html
+++ b/girlnames.html
@@ -4,24 +4,22 @@
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width">
     <title>repl.it</title>
-    <link href="style.css" rel="stylesheet" type="text/css" /> 
     <link href="girlnames.css" rel="stylesheet" type="text/css" />
   </head>
-  <body>
+  <body onload="init()">
     <script src="script.js"></script>
     <script src="girlnames.js"></script>
 
     <div id="banner">
-      <h1><b>Girls Baby Names<b/></h1>
-      <p>Girls Nursery<p>
+      <h1><b> Girl names Names<b/></h1>
+      <p>Girl Nursery<p>
     </div>
     <nav class="container">
       <a href="index.html">Home</a>
       <a href="boynames.html">Boys Names </a>
-      <a href="girlnames.html">Girls Names</a>
+      <a href="girlnames.html">Girl Names </a>
     </nav>
-
-    <div class="container">
+<div class="container">
 <input style="flex:1;text-align:right;" type="text" id="namesearch" placeholder="Enter First letters of Girl names" > &nbsp; 
  <a class="button" onclick="searchGirlnames()"> Search </a>
     </div>
