--- a/girlnames.html
+++ b/girlnames.html
@@ -11,7 +11,7 @@
     <script src="girlnames.js"></script>
 
     <div id="banner">
-      <h1><b> Girl names Names<b/></h1>
+      <h1><b> Girl Names<b/></h1>
       <p>Girl Nursery<p>
     </div>
     <nav class="container">
