add charts page

--- a/index.html
+++ b/index.html
@@ -19,6 +19,7 @@
       <a href="index.html">Home</a>
       <a href="boynames.html">Boys Names </a>
       <a href="girlnames.html">Girls Names</a>
+      <a href="charts.html">Charts</a>
     </nav>
 
     <div class="container">
