--- a/boynames.html
+++ b/boynames.html
@@ -18,6 +18,7 @@
       <a href="index.html">Home</a>
       <a href="boynames.html">Boys Names </a>
       <a href="girlnames.html">Girl Names </a>
+      <a href="charts.html">Charts</a>
     </nav>
 <div class="container">
 <input style="flex:1;text-align:right;" type="text" id="namesearch" placeholder="Enter First letters of boy names" > &nbsp; 
